# reformahtml

./: Cargo.toml  LICENSE  README.md  reformahtml.py
src/: main.rs
tests/fixtures/expected/: br.html  comments.html  inline-start-of-line.html  markdown-dl.bs  markdown-paragraph-in-div.bs  markdown-ul.bs  svg-foreignobject.html
tests/fixtures/inputs/: comments.html  data-noreformat.html  indented-inline-in-structural.html  inline-after-structural-start-tag.html  inline-start-of-line.html  markdown-dl.bs  markdown-paragraph-in-div.bs  markdown-ul.bs  xmp-less-than.bs
