[package]
name = "reformahtml"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Command line tool to format HTML or Bikeshed-flavored markdown to no-line-breaks but keep original indentation."
readme = "README.md"
repository = "https://github.com/zcorpan/reformahtml"
keywords = ["whatwg", "w3c", "web-specification", "web-standard", "bikeshed"]
categories = ["command-line-utilities", "web-programming"]

# See https://stackoverflow.com/a/54842093/3947332.
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memchr = "2.7"
